force-app/main/default/objects/ABHFL_Case_Detail__c/ABHFL_Case_Detail__c.object-meta.xml
<CustomObject>
    <label>ABHFL Case Detail</label>
    <nameField>
        <displayFormat>ABHFL-{0000000}</displayFormat>
        <label>ABHFL Case Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABHFL Case Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>