force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delinquent</fullName>
            </value>
            <value>
                <fullName>Non Delinquent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>