force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Address_Change_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Change_Status__c</fullName>
    <label>Address Change Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>