force-app/main/default/objects/ABHFL_Case_Detail__c/fields/ALL_LANS__c.field-meta.xml
<CustomField>
    <fullName>ALL_LANS__c</fullName>
    <description>It will contain all LAN which are associated with current case&apos;s account. Adding this field to add into Email template</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ALL LANS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>