force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Applicant_profile_at_time_of_onboarding__c.field-meta.xml
<CustomField>
    <fullName>Applicant_profile_at_time_of_onboarding__c</fullName>
    <label>Applicant profile at time of onboarding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>