force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Approval_Attached__c.field-meta.xml
<CustomField>
    <fullName>Approval_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Attached</label>
    <type>Checkbox</type>
</CustomField>