force-app/main/default/objects/ABHFL_Case_Detail__c/fields/As_On_Date__c.field-meta.xml
<CustomField>
    <fullName>As_On_Date__c</fullName>
    <label>As On Date</label>
    <type>Date</type>
</CustomField>