force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Attachment_in_DMS__c.field-meta.xml
<CustomField>
    <fullName>Attachment_in_DMS__c</fullName>
    <label>Attachment in DMS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>