force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Auto_Create_Case_Extension__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Case_Extension__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Create Case Extension</label>
    <type>Checkbox</type>
</CustomField>