force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>LAN_Mapping__c</referenceTo>
    <relationshipLabel>ABHFL Case Details</relationshipLabel>
    <relationshipName>ABHFL_Case_Details</relationshipName>
    <type>Lookup</type>
</CustomField> 