force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Billing_Cycle_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle_Due_Date__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>Billing Cycle Due Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fifth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>