force-app/main/default/objects/ABHFL_Case_Detail__c/fields/BT_Banks__c.field-meta.xml
<CustomField>
    <fullName>BT_Banks__c</fullName>
    <label>BT Banks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar Housing Finance Limited</fullName>
            </value>
            <value>
                <fullName>Aavas Financiers Limited</fullName>
            </value>
            <value>
                <fullName>Adani Housing Finance Private Limited</fullName>
            </value>
            <value>
                <fullName>Aditya Birla Finance Ltd</fullName>
            </value>
            <value>
                <fullName>Aditya Birla Housing Finance Limited</fullName>
            </value>
            <value>
                <fullName>AGRIM Housing Finance Private Limited</fullName>
            </value>
            <value>
                <fullName>Aham Housing Finance Private Limited</fullName>
            </value>
            <value>
                <fullName>Akme Star Housing Finance Limited</fullName>
            </value>
            <value>
                <fullName>Altum Credo Home Finance Private Limited</fullName>
            </value>
            <value>
                <fullName>Anand Housing Finance Private Limited</fullName>
            </value>
            <value>
                <fullName>APAC Housing Finance Private Limited</fullName>
            </value>
            <value>
                <fullName>Aptus Value Housing Finance India Limited</fullName>
            </value>
            <value>
                <fullName>Arman Financial Services Limited</fullName>
            </value>
            <value>
                <fullName>ART Housing Finance (India) Limited</fullName>
            </value>
            <value>
                <fullName>Aryarth Housing Finance Limited</fullName>
            </value>
            <value>
                <fullName>Ashika Credit Capital Limited</fullName>
            </value>
            <value>
                <fullName>Au Small Finance Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Avanse Financial Services</fullName>
            </value>
            <value>
                <fullName>Aviom India Housing Finance Private Limited</fullName>
            </value>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>Baid Housing Finance Private Limited</fullName>
            </value>
            <value>
                <fullName>Baid Leasing and Finance Company Limited</fullName>
            </value>
            <value>
                <fullName>Bajaj Finance Limited</fullName>
            </value>
            <value>
                <fullName>Bajaj Holdings Limited</fullName>
            </value>
            <value>
                <fullName>Bajaj Housing Finance Limited</fullName>
            </value>
            <value>
                <fullName>Balmer Lawrie Investment Limited</fullName>
            </value>
            <value>
                <fullName>Bandhan Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bank of India</fullName>
            </value>
            <value>
                <fullName>Bank of Maharashtra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>