force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Callback_Timeslot_EZGO__c.field-meta.xml
<CustomField>
    <fullName>Callback_Timeslot_EZGO__c</fullName>
    <label>Callback Timeslot EZGO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>