force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Change_Effect_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Effect_Date__c</fullName>
    <label>Change Effect Date</label>
    <type>Date</type>
</CustomField>