force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Change_EMI_Amount__c.field-meta.xml
<CustomField>
    <fullName>Change_EMI_Amount__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>Change EMI Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>