force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Circle__c.field-meta.xml
<CustomField>
    <fullName>Circle__c</fullName>
    <label>Circle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>