force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Claim_Status2__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status2__c</fullName>
    <label>Claim Status 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intimated</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>