force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Competition_ROI__c.field-meta.xml
<CustomField>
    <fullName>Competition_ROI__c</fullName>
    <label>Competition ROI</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>