force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Category__c</fullName>
    <label>Complaint Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Damage/deterioration/delay in service fulfilment</fullName>
            </value>
            <value>
                <fullName>Fraud/forgery in service</fullName>
            </value>
            <value>
                <fullName>Incorrect service fulfillment</fullName>
            </value>
            <value>
                <fullName>Non receipt of service asked/requested for</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>