force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Complaint_Investigation_PDF_HTML__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Investigation_PDF_HTML__c</fullName>
    <label>Complaint Investigation PDF HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>