force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Complaint_Investigation_Response_Json__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Investigation_Response_Json__c</fullName>
    <label>Complaint Investigation Response Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>