force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Complaint_number__c.field-meta.xml
<CustomField>
    <fullName>Complaint_number__c</fullName>
    <label>Complaint number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>