force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Complaint_Overall_SLA__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Overall_SLA__c</fullName>
    <description>It is carrying overall case sla of complaint case after recategorization</description>
    <label>Complaint Overall SLA</label>
    <type>DateTime</type>
</CustomField>