force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Complaint_RCA__c.field-meta.xml
<CustomField>
    <fullName>Complaint_RCA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <description>This is field where we are carrying multiple complaint fields for the reference to user</description>
    <label>Complaint RCA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>