force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Complaint_Recategorization__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Recategorization__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <defaultValue>false</defaultValue>
    <description>This field is used for report purpose for business.</description>
    <label>Complaint Recategorization</label>
    <type>Checkbox</type>
</CustomField>