force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCH</fullName>
            </value>
            <value>
                <fullName>CPGRAMS</fullName>
            </value>
            <value>
                <fullName>NHB</fullName>
            </value>
            <value>
                <fullName>RBI</fullName>
            </value>
            <value>
                <fullName>Branch Walkin</fullName>
            </value>
            <value>
                <fullName>Grievance Redressal</fullName>
            </value>
            <value>
                <fullName>Phone Inbound</fullName>
            </value>
            <value>
                <fullName>Experian</fullName>
            </value>
            <value>
                <fullName>Equifax</fullName>
            </value>
            <value>
                <fullName>Transunion</fullName>
            </value>
            <value>
                <fullName>Senior Management</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Legal Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>