force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>Confidence Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>