force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Correct_Category__c.field-meta.xml
<CustomField>
    <fullName>Correct_Category__c</fullName>
    <formula>Correct_Type_Sub_Type__r.Nature__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correct Category</label>
    <type>Text</type>
</CustomField>