force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Correct_Type__c.field-meta.xml
<CustomField>
    <fullName>Correct_Type__c</fullName>
    <formula>Correct_Type_Sub_Type__r.Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correct Type</label>
    <type>Text</type>
</CustomField>