force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Correct_Type_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Correct_Type_Sub_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correct Type Sub Type</label>
    <referenceTo>ASF_Case_Category_Config__c</referenceTo>
    <relationshipLabel>ABHFL Case Details</relationshipLabel>
    <relationshipName>ABHFL_Case_Details</relationshipName>
    <type>Lookup</type>
</CustomField>