force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Correction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Correction_Reason__c</fullName>
    <label>Correction Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Status</fullName>
            </value>
            <value>
                <fullName>Delinquency</fullName>
            </value>
            <value>
                <fullName>Deletion of Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>