force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Creator_Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>Creator_Emp_Id__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>Creator Emp Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>