force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Creator_Name__c.field-meta.xml
<CustomField>
    <fullName>Creator_Name__c</fullName>
    <description>Used for HFL Inbound API</description>
    <label>Creator Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>