force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Credit_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Credit_Deviation__c</fullName>
    <label>Credit Deviation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>