force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Credit_in_Repayment_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Credit_in_Repayment_Accounts__c</fullName>
    <label>Credit in Repayment Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>