force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Critical_Request__c.field-meta.xml
<CustomField>
    <fullName>Critical_Request__c</fullName>
    <label>Critical Request?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>