force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Current_cibil_review__c.field-meta.xml
<CustomField>
    <fullName>Current_cibil_review__c</fullName>
    <label>Current cibil review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>