force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Current_cibil_score__c.field-meta.xml
<CustomField>
    <fullName>Current_cibil_score__c</fullName>
    <label>Current cibil score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>