force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Current_Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Financial_Year__c</fullName>
    <formula>TEXT(YEAR( TODAY() )) +  &apos;-&apos;  +  RIGHT( TEXT((YEAR( TODAY() ) + 1)),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Financial Year</label>
    <type>Text</type>
</CustomField>