force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Current_Report_RCU_O__c.field-meta.xml
<CustomField>
    <fullName>Current_Report_RCU_O__c</fullName>
    <label>Current Report RCU (O)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>