force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Current_Report_RCU_R__c.field-meta.xml
<CustomField>
    <fullName>Current_Report_RCU_R__c</fullName>
    <label>Current Report RCU (R)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>