force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Current_Title_search_report__c.field-meta.xml
<CustomField>
    <fullName>Current_Title_search_report__c</fullName>
    <label>Current Title search report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>