force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Current_Valuation_Remark__c.field-meta.xml
<CustomField>
    <fullName>Current_Valuation_Remark__c</fullName>
    <label>Current Valuation Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>