force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Customer_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contacted__c</fullName>
    <label>Customer Contacted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>