force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Department_dependency__c.field-meta.xml
<CustomField>
    <fullName>Department_dependency__c</fullName>
    <label>Department Dependency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>PMAY</fullName>
            </value>
            <value>
                <fullName>RCU</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>CPU Banking</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Sales Governance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>