force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Destination_Branch__c.field-meta.xml
<CustomField>
    <fullName>Destination_Branch__c</fullName>
    <label>Destination Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Aurangabad</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Baroda</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Bhubaneswar</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Dehradun</fullName>
            </value>
            <value>
                <fullName>Delhi - Janakpuri</fullName>
            </value>
            <value>
                <fullName>Delhi - Nehru place</fullName>
            </value>
            <value>
                <fullName>Delhi-1 (Gurgaon)</fullName>
            </value>
            <value>
                <fullName>Delhi-Parliament House</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Jodhpur</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Ludhiana</fullName>
            </value>
            <value>
                <fullName>Mangalore</fullName>
            </value>
            <value>
                <fullName>Mumbai - Borivali</fullName>
            </value>
            <value>
                <fullName>Mumbai - Kalyan</fullName>
            </value>
            <value>
                <fullName>Mumbai -Andheri</fullName>
            </value>
            <value>
                <fullName>Mumbai-Vashi</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Nasik</fullName>
            </value>
            <value>
                <fullName>Noida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>