force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Details_Requested__c.field-meta.xml
<CustomField>
    <fullName>Details_Requested__c</fullName>
    <label>Details Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrower / Co-Borrower Details</fullName>
            </value>
            <value>
                <fullName>Current EMI Date</fullName>
            </value>
            <value>
                <fullName>Current EMI / PEMI</fullName>
            </value>
            <value>
                <fullName>Current Overdue Amount Details</fullName>
            </value>
            <value>
                <fullName>Current ROI</fullName>
            </value>
            <value>
                <fullName>Disbursement Details</fullName>
            </value>
            <value>
                <fullName>Installments Pending / Balance Tenor</fullName>
            </value>
            <value>
                <fullName>Principal Outstanding</fullName>
            </value>
            <value>
                <fullName>Repayment Details</fullName>
            </value>
            <value>
                <fullName>RM Details</fullName>
            </value>
            <value>
                <fullName>Virtual Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>