force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Disbursal_6__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_6__c</fullName>
    <description>Returns True if Disbursal date is lesser than 6 months from today.</description>
    <formula>IF(
    AND(
        Case__r.Asset.Last_Disbursement_Date__c&gt;= DATE(YEAR(TODAY()), MONTH(TODAY()) - 6, DAY(TODAY())),
        Case__r.Asset.Last_Disbursement_Date__c&lt;= TODAY()
    ),
    true,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disbursal &lt; 6?</label>
    <type>Checkbox</type>
</CustomField>