force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Disbursal_Check__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Check__c</fullName>
    <formula>Case__r.Asset.Last_Disbursement_Date__c &gt;=  $CustomMetadata.Calendar_Year__mdt.FY_2023.Current_Calendar_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disbursal Check</label>
    <type>Checkbox</type>
</CustomField>