force-app/main/default/objects/ABHFL_Case_Detail__c/fields/Disburstment_Type__c.field-meta.xml
<CustomField>
    <fullName>Disburstment_Type__c</fullName>
    <label>Disburstment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>